2009-02-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m:
	* Source/GSThemeTools.m:
	* Source/GSThemePrivate.h:
	Improve tiling for matrix and for rectangles in flipped views.

2009-02-04 17:51-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSWindow.m: Correct compilation error.

2009-02-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSApplication.m: Don't attempt to set app icon until
	creating the window (if we are going to create it).
	Fix size checks when setting image to cope if window does not
 	exist (was previously the normal case) to avoid streams of X
	errors on most systems and segmentation fault on sparc.

2009-02-04 01:53-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoader.m: Correct the message to indicate an issue 
	loading a nib, not a gorm, file.
	* Source/GSNibLoading.m: Uncomment the release in the dealloc
	method.
	* Source/NSApplication.m: Restrict the icon size to the size of the
	miniwindow if it's larger, but don't expand it, if it's smaller.
	* Source/NSLayoutManager.m: -initWithCoder: Initialize when 
	loading a nib in the same way that we initialize when loading 
	a gorm file.

2009-02-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-_sendActionFrom:): New helper method for
	action sending.

2009-02-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSNibLoading.m (NSButtonImageSource -initWithCoder:): Add
	missing retain of the named image.

2009-02-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTextContainer.m: Add some frame size checks.
	* Source/NSScrollView.m: ditto
	* Source/NSHelpPanel.m: Make sure we create with a reasonable size.

2009-02-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m (-dragSelectionWithEvent:...): Correct
	computation of attachment cell frame.
	* Source/NSParagraphStyle.m (NSMutableParagraphStyle
	-setParagraphStyle:): Set only existing text blocks and text lists.

2009-01-31 Richard Frith-Macdonald <rfm@gnu.org>
